--- a/style.css
+++ b/style.css
@@ -1,151 +1,176 @@
-@@import url('https://fonts.googleapis.com/css2?family=Lato');
+@import url("https://fonts.googleapis.com/css2?family=Lato");
 
-*{
-    font-family: Lato ;
-    line-height: 1.618rem;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  font-family: Lato;
+  line-height: 1.618rem;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    text-align: center;
+body {
+  text-align: center;
 }
 
-#portfolio_container{
-    background-color: red;
-    height: 200px;
-    /* background-image: linear-gradient(#f4ecf7,#e2ebf0 ); */
-    margin: 2rem auto;
-    max-width: 60rem;
-    padding-bottom: -20rem;
-    width: 1000%;
+.header_Text {
+  position: absolute;
+  left: 30rem;
+  top: 10rem;
+  font-size: 230%;
+}
+
+.portfolio_container {
+  /* background-color: red; */
+  height: 6000px;
+  background-image: linear-gradient(
+    #f4f6f1,
+    #f4f6f1,
+    #f4ecf7,
+    #bface1,
+    #bface1,
+    #bface1,
+    #b065cc,
+    #b065cc,
+    #b065cc
+  );
+  margin: 2rem auto;
+  max-width: 80rem;
+  width: 800%;
 }
 
 #project_gif {
-    /* height: auto; */
-    /* position: relative; */
-    bottom: 150px;
+  height: 800%;
+  position: relative;
+  bottom: 90px;
 }
 
-#banner {
-    max-width: 500px;
-    height: 200px;
-    margin-left: 3rem;
+.portfolio_BackgroundPic {
+  background-image: url(https://images.unsplash.com/photo-1494486205133-727224a9f727?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+  height: 600px;
+  max-width: 100%;
 }
 
-
-#aboutMe{
-    margin-top: -4rem;
+#aboutMe {
+  margin-top: -4rem;
 }
 
-.container{
-    background-color: #fdfafa;
-    margin: 2rem auto;
-    max-width: 60rem;
-    padding-bottom: -20rem;
-    width: 1000%;
-    border-color: white;
+.skills_wrapper {
+  display: grid;
+  grid-template-columns: repeat(9, 100px);
+  justify-content: center;
+  padding: 3rem;
+}
+.icon {
+  font-size: 20px;
+  color: #8d3c99;
 }
 
-html{
-    font-size: 16px;
-    margin-top:2em
+html {
+  font-size: 16px;
+  margin-top: 2em;
 }
 
-h1,h2,h3{
-    color: #c19dc7;
+h1,
+h2,
+h3 {
+  color: #160d18;
 }
 
-article > a{
-    color: #c19dc7;
-    text-decoration: none;
+article > a {
+  color: #c19dc7;
+  text-decoration: none;
 }
 header,
 main,
 footer {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
-header{
-    padding: 3em 0;
+header {
+  padding: 3em 0;
 }
 
-header h1{
-    font-size: 2em;
-    padding-left: .5em;
-    margin-top: -2.5rem;
+header h1 {
+  font-size: 2em;
+  padding-left: 0.5em;
+  margin-top: -2.5rem;
 }
 
-header span{
-    font-size: 1.2em;
-    color: #999;
+header span {
+  font-size: 1.2em;
+  color: #999;
 
-    padding: 2em;
+  padding: 2em;
 }
 
-.profile1{
-    margin-top: -2rem;
-    max-width: 40%;
+.profile1 {
+  margin-top: -2rem;
+  max-width: 40%;
 }
 
-nav{
-    position: fixed;
-    top: 0;
-    left:0;
-    width: 100%;
-    padding: -30px;
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: -30px;
 
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
 
-    list-style-type: none;
-    
+  list-style-type: none;
 }
 
-nav a{
-    padding: .5em 2em;
-    text-decoration: none;
-    color: #c19dc7;
-
-
+nav a {
+  padding: 0.5em 2em;
+  text-decoration: none;
+  color: #c19dc7;
+  font-size: 23px;
 }
 
-nav a:hover{
-    background: #bfd0da;
-    border-radius: 1rem;
-    transition:.5s; 
+nav a:hover {
+  background: #68468f;
+  border-radius: 1rem;
+  transition: 0.5s;
 }
 
-section{
-    padding:2.7em;
-    min-height: .5em; 
+section {
+  padding: 2.7em;
+  min-height: 0.5em;
 }
 
-section > p{
-    margin: 1em 0;
+section > p {
+  margin: 1em 0;
 }
 
-#socialMedia ul{
-    display: flex;
-    flex-flow: row;
-    gap: 10px;
-    text-decoration: none;
-    list-style: none;
-    
+#socialMedia ul {
+  display: flex;
+  flex-flow: row;
+  gap: 10px;
+  text-decoration: none;
+  list-style: none;
 }
 
-#socialMedia a{
-    color: #7c55ca;
+#socialMedia a {
+  color: #7c55ca;
 }
 
 section ul {
-    padding-left: 1.5em
+  padding-left: 1.5em;
 }
 
+.logo {
+  position: absolute;
+  top: -13rem;
+  left: -12rem;
+  width: 40rem;
+}
 
+* {
+  box-sizing: border-box;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -160,12 +185,15 @@ section ul {
 }
 
 /* Next & previous buttons */
-.prev, .next {
+.prev,
+.next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  /* left: 19rem; */
   width: auto;
   margin-top: -22px;
+  margin-right: 407px;
+  margin-left: -109px;
   padding: 16px;
   color: white;
   font-weight: bold;
@@ -182,8 +210,9 @@ section ul {
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -218,7 +247,8 @@ section ul {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active,
+.dot:hover {
   background-color: #717171;
 }
 
@@ -231,13 +261,21 @@ section ul {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* .project_grid{
@@ -254,25 +292,22 @@ section ul {
     max-width: 100%;
 } */
 
-
-
-footer{
-    margin-top:2em;
-    margin-bottom: 1em;
-    background: #666;
-    color:white;
-    padding: 1em 0;
-    text-align: center;
+footer {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  background: #666;
+  color: white;
+  padding: 1em 0;
+  text-align: center;
 }
 
-#skills2 > ul{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto;
+#skills2 > ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
 }
 
 /* Media Queries */
 
-@media screen and (max-width: 512px){
-    
+@media screen and (max-width: 512px) {
 }
