--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ body {
 }
 
 .portfolio_container {
-  height: 2800px;
+  height: 2900px;
   margin: 2rem auto;
-  max-width: 80%;
+  width: 80%;
   background-image: linear-gradient(
     #f4f6f1,
     #f4f6f1,
@@ -36,6 +36,7 @@ body {
     #b065cc
   );
   background-repeat: no-repeat;
+  aspect-ratio: 1/1;
 }
 
 .portfolio_BackgroundPic {
@@ -45,36 +46,37 @@ body {
   background-repeat: no-repeat;
 }
 
-.profile {
+/* .profile {
   width: 80%;
   /* margin-right: 900rem;
   /* margin-left: 10rem; */
-  margin-top: 10rem;
+  /* margin-top: 10rem;
   position: relative;
   right: 20rem;
   top: 9rem;
-}
+}  */
 
-.profile h1 {
-  color: #6d3975;
-  font-size: 303%;
+
+
+.logoProfileFlex{
+    display: flex;
+
 }
 
 .log img {
-  width: 48%;
-  padding: -8;
-  position: relative;
-  bottom: 4rem;
-  right: 20rem;
+  max-width: 48%;
+  margin-top:-10rem;
+  margin-left:-40rem;
+  /* padding: -8; */
+  
 }
 
 .profile img {
-  max-width: 37%;
+  max-width: 29%;
   border-radius: 4rem;
-  position: relative;
-  left: 6rem;
-  bottom: 42rem;
   z-index: 1;
+  margin-top: -15rem;
+  margin-left: -40rem;
 }
 
 #aboutMe {
@@ -222,12 +224,14 @@ section ul {
 
 #projects {
   margin-top: -4rem;
+  width: 100%;
 }
 
 .project-wrapper{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   padding-top: 1rem;
+  
 }
 
 .projectVideo video{
@@ -264,6 +268,14 @@ section ul {
   background-color: #e63470;
 }
 
+#mybtn{
+    font-size: 1.1rem;
+
+}
+
+.pbtn{
+    font-size: 1.1rem;
+} 
 footer {
   margin-top: -1em;
   padding: 1em 0;
@@ -311,6 +323,14 @@ footer {
     width:90%;
   }
 }
+
+@media only screen and (max-width:1459px){
+    .project-wrapper {
+        display: grid;
+        grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+        padding-top: 1rem;
+    }
+  }
 
 /* @media only screen and (width:1274px){
   .skills_wrapper{
