--- a/style.css
+++ b/style.css
@@ -46,29 +46,10 @@ body {
   background-repeat: no-repeat;
 }
 
-/* .profile {
-  width: 80%;
-  /* margin-right: 900rem;
-  /* margin-left: 10rem; */
-  /* margin-top: 10rem;
-  position: relative;
-  right: 20rem;
-  top: 9rem;
-}  */
-
-
-
-.logoProfileFlex{
-    display: flex;
-
-}
-
 .log img {
   max-width: 48%;
-  margin-top:-10rem;
-  margin-left:-40rem;
-  /* padding: -8; */
-  
+  margin-top: -10rem;
+  margin-left: -40rem;
 }
 
 .profile img {
@@ -82,7 +63,6 @@ body {
 #aboutMe {
   text-align: justify;
   background-color: #a35dad;
-  /* background-color: #76416f; */
 }
 
 .workingInProg {
@@ -96,7 +76,7 @@ body {
   display: grid;
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap:1rem;
+  gap: 1rem;
   padding: 3rem;
 }
 .icon {
@@ -183,22 +163,19 @@ section ul {
   padding-left: 1.5em;
 }
 
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-
-/* Modal Content */
 .modal-content {
   background-color: #fefefe;
   margin: auto;
@@ -207,7 +184,6 @@ section ul {
   width: 80%;
 }
 
-/* The Close Button */
 .close {
   color: #aaaaaa;
   float: right;
@@ -227,18 +203,17 @@ section ul {
   width: 100%;
 }
 
-.project-wrapper{
+.project-wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   padding-top: 1rem;
-  
 }
 
-.projectVideo video{
-  width:50%;
+.projectVideo video {
+  width: 50%;
   height: 5%;
 }
-.project_box img  {
+.project_box img {
   text-align: center;
   width: 400px;
 }
@@ -268,14 +243,13 @@ section ul {
   background-color: #e63470;
 }
 
-#mybtn{
-    font-size: 1.1rem;
-
+#mybtn {
+  font-size: 1.1rem;
 }
 
-.pbtn{
-    font-size: 1.1rem;
-} 
+.pbtn {
+  font-size: 1.1rem;
+}
 footer {
   margin-top: -1em;
   padding: 1em 0;
@@ -288,7 +262,7 @@ footer {
   font-size: 2rem;
   list-style: none;
   background-color: #8b3897;
-  max-width:80%;
+  max-width: 80%;
 }
 
 #mail,
@@ -305,8 +279,8 @@ footer {
 
 /* Media Queries */
 
-@media only screen and (width:948px) {
-  .projects  {
+@media only screen and (width: 948px) {
+  .projects {
     display: flex;
     flex-direction: row;
   }
@@ -314,28 +288,18 @@ footer {
   .portfolio_container {
     height: 4000px;
   }
-
-  
 }
 
-@media only screen and (max-width:1669px){
-  .project-wrapper img{
-    width:90%;
+@media only screen and (max-width: 1669px) {
+  .project-wrapper img {
+    width: 90%;
   }
 }
 
-@media only screen and (max-width:1459px){
-    .project-wrapper {
-        display: grid;
-        grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
-        padding-top: 1rem;
-    }
-  }
-
-/* @media only screen and (width:1274px){
-  .skills_wrapper{
+@media only screen and (max-width: 1459px) {
+  .project-wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    justify-content: center;
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    padding-top: 1rem;
   }
-} */
+}
