--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato");
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=League Gothic');
 
 * {
   font-family: Lato;
@@ -163,12 +164,85 @@ section ul {
   padding-left: 1.5em;
 }
 
-#ArtSectFun{
-  width:50%;
+
+
+.modalHeaderME_div {
+  background-image: url('https://i.gifer.com/zX4.gif');
+  width: 100%;
+  background-repeat: no-repeat;
+  padding-bottom: 2rem;
+
+
+}
+
+.modalHeader{
+  padding: 1.5rem;
+  color: white;
+  font-family: 'League Gothic';
+  margin-top: 1rem;
+  letter-spacing: 0.2rem;
+  /* color:#f38dc8; */
+}
+
+.modalHeaderAR_div {
+  background-image: url('https://data.whicdn.com/images/235329233/original.gif');
+  width: 100%;
+  background-repeat: no-repeat;
+  
+}
+.modalHeaderJE_div {
+  background-image: url('https://thumbs.gfycat.com/AlertRipeDevilfish-size_restricted.gif');
+  width: 100%;
+  background-repeat: no-repeat;
+ 
+}
+.modalHeaderDM_div {
+  background-image: url('https://media2.giphy.com/media/g0delle0tz7AH4nXex/giphy.gif');
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
+#ArtSectFun {
+  width: 50%;
   margin-left: 13rem;
 }
 
+#masks {
+  padding: 3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: none;
+}
+
+#masks img {
+  width: 20rem;
+}
+
+#mysteryBox {
+  width: 50%;
+}
+
+#JACs {
+  width: 50%;
+  margin-left: 17.5rem;
+}
+
 .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal2 {
   display: none;
   position: fixed;
   z-index: 1;
@@ -187,12 +261,13 @@ section ul {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  height: 400px;
+  height: 500px;
   text-align: justify;
+  z-index: 4;
 }
 
 .close {
-  color: #aaaaaa;
+  color: #302d2d;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -200,7 +275,7 @@ section ul {
 
 .close:hover,
 .close:focus {
-  color: #000;
+  color: #e63470;
   text-decoration: none;
   cursor: pointer;
 }
@@ -272,7 +347,6 @@ footer {
   max-width: 80%;
 }
 
-
 #mail,
 .footer_github,
 .fa-linkedin {
@@ -284,8 +358,6 @@ footer {
 .fa-linkedin:hover {
   color: #e63470;
 }
-
-
 
 /* Media Queries */
 
@@ -314,12 +386,11 @@ footer {
   }
 }
 
-@media only screen and (max-width: 776px){
+@media only screen and (max-width: 776px) {
   .skills_wrapper {
     display: grid;
     align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-   
   }
 
   .icon {
@@ -329,12 +400,9 @@ footer {
 
   .project_box button {
     margin: 2rem;
-   
   }
 
   .videoBtn {
-   font-size: 50%;
+    font-size: 50%;
   }
-  
-  
 }
